# clidistcachelayer

./: .gitignore  CMakeLists.txt  INSTALL.md  QUICKSTART.md  README.md  docker-compose.yml
benchmarks/: ycsb_benchmark.cpp
config/: auth.conf  tls.conf
docker/: Dockerfile.coordinator  Dockerfile.server  README.md
include/distcache/: admin_service.h  auth_manager.h  auth_token.h  cache_entry.h  coordinator_server.h  failover_manager.h  hash_ring.h  logger.h  membership_manager.h  metrics.h  quorum_coordinator.h  rate_limiter.h  rebalance_orchestrator.h  recovery_manager.h  replication_manager.h  sharding_client.h  snapshot_manager.h  storage_engine.h  tls_config.h  validator.h  version_vector.h  wal.h
k8s/: README.md  coordinator-deployment.yaml
proto/: admin.proto  cache_service.proto  coordinator.proto  failover.proto  replication.proto  wal.proto
scripts/: build.sh  fix_integration_api.py  fix_integration_api.sh  fix_test_api.py  generate_test_certs.sh  run-integration-tests.sh  run-ycsb-benchmark.sh  test_server.sh
src/: admin_cli.cpp  benchmark.cpp  cli_main.cpp  coordinator_main.cpp  main.cpp  metrics_cli.cpp  token_gen.cpp
src/cache/: metrics.cpp  storage_engine.cpp
src/client/: sharding_client.cpp
src/cluster/: admin_service.cpp  coordinator_server.cpp  failover_manager.cpp  hash_ring.cpp  membership_manager.cpp  quorum_coordinator.cpp  rebalance_orchestrator.cpp  snapshot_manager.cpp
src/persistence/: recovery_manager.cpp  wal.cpp
src/replication/: replication_manager.cpp
src/security/: auth_manager.cpp  auth_token.cpp  rate_limiter.cpp  tls_config.cpp  validator.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  consistency_test.cpp  grpc_server_test.cpp  multi_node_test.cpp  scaling_test.cpp
tests/unit/: CMakeLists.txt  admin_test.cpp  cache_entry_test.cpp  coordinator_test.cpp  failover_test.cpp  hash_ring_test.cpp  membership_test.cpp  replication_test.cpp  sharding_client_test.cpp  storage_engine_test.cpp
